Add general_offer model

--- a/app/views/general_offers/new.html.haml
+++ b/app/views/general_offers/new.html.haml
@@ -8,7 +8,7 @@
         Select a category below...
       %ul.help-tags.unstyled
         -NeedCategory.root.each do |category|
-          %li=link_to(category, '#', :class => "need-category help-tag btn#{@offer.category_id == category.id ? ' btn-primary' : ''}", :data => {:category_id => category.id})
+          %li=link_to(category, '#', :class => "need-category help-tag btn#{@general_offer.category_id == category.id ? ' btn-primary' : ''}", :data => {:category_id => category.id})
         
     #need-sub-categories.tag-selector.tag-selector-row-2.clearfix.hide
       %span.tag-selector-arrow
@@ -17,10 +17,10 @@
   
 .row
   .span6
-    =render('form')
-  .span6
     %h3
       People who need help
     %ul#suggested-needs.loader-square.help-list.unstyled
       -Need.unresolved.visible_to_user(current_user).random(5).each do |need|
         =render('needs/list_item', :need => need)
+  .span6
+    =render('form')
