--- a/app/views/general_offers/new.html.haml
+++ b/app/views/general_offers/new.html.haml
@@ -14,6 +14,8 @@
       %span.tag-selector-arrow
       %h3.mb1 More specifically...
       %ul.help-tags.unstyled
+        -(@general_offer.category.try(:sub_categories) || []).each do |category|
+          %li=link_to(category, '#', :class => "need-sub-category help-tag btn#{@general_offer.sub_category_id == category.id ? ' btn-primary' : ''}", :data => {:sub_category_id => category.id})
   
 .row
   .span6
