--- a/app/views/needs/_form.html.haml
+++ b/app/views/needs/_form.html.haml
@@ -10,7 +10,9 @@
     =f.inputs do
       =f.hidden_field :category_id, :value => @need.category.try(:id), :id => 'category-id'
       =f.hidden_field :sub_category_id, :value => @need.sub_category.try(:id), :id => 'sub-category-id'
-      
+      -if @need.errors[:category].present?
+        .control-group.error
+          %label.control-label Please select a category from above
       =f.input :description, :label => "If you can't find anyone offering help, post your request below", :help => "Describe what you need help with. Be sure to include when you need the help and how flexible you can be.", :input_html => { :class => "span5", :rows => "6" }, :required => false
       =f.input :radius, :as => :select, :collection => need_radius_options, :include_blank => false, :label => "Broadcast radius", :help => "People who live within this distance from you will hear about your need", :input_html => {:class => "span5"}
       =f.input :need_to_know_by, :as => :radio, :collection => [["Any time","anytime"],["As soon as possible","asap"], ["A specific date", "date"]], :label => "I need to know by", :help => "When would you like to know if anybody can help you?"
