--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -49,7 +49,7 @@
           -if @neighbourhood 
             %li=link_to('About', neighbourhood_about_path(@neighbourhood), :class=>"intro-nav-link-about intro-nav-link")          
             %li=link_to('Latest news', neighbourhood_news_path(@neighbourhood), :class=>"intro-nav-link-latest intro-nav-link")
-            %li=link_to_slug("Help", :help, :class=> "intro-nav-link-help intro-nav-link")
+            %li=link_to("Help", neighbourhood_help_path(@neighbourhood), :class=> "intro-nav-link-help intro-nav-link")
           -else
             %li=link_to_slug('About', :about, :class=>"intro-nav-link-about intro-nav-link")          
             %li=link_to_slug('Latest news', :news, :class=>"intro-nav-link-latest intro-nav-link")
