--- a/app/views/neighbourhoods/show.html.haml
+++ b/app/views/neighbourhoods/show.html.haml
@@ -7,6 +7,7 @@
       NeedSelect.init();
       NeedsMap.needs = #{@needs_json};
       NeedsMap.users = #{@users_json};
+      NeedsMap.general_offers = #{@general_offers_json};
       #{'NeedsMap.init();' if current_user}
       Needs.init();
     });
