List pre_registrations and allow deleting of them

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1652,3 +1652,6 @@ a.small-help-btn {
 #suggested-needs.loading {
   margin-top: 20px;
 }
+#pre-registrations-delete-form .center {
+  text-align: center;
+}
