--- a/app/views/layouts/logged_in/_header.html.haml
+++ b/app/views/layouts/logged_in/_header.html.haml
@@ -46,10 +46,10 @@
                   =t(:logout)  
         %ul.nav.nav-intro.unstyled                
           %li=link_to "Home", root_path, :class=>"intro-nav-link-home intro-nav-link"     
-          -if @neighbourhood 
-            %li=link_to('About', neighbourhood_about_path(@neighbourhood), :class=>"intro-nav-link-about intro-nav-link")          
-            %li=link_to('Latest news', neighbourhood_news_path(@neighbourhood), :class=>"intro-nav-link-latest intro-nav-link")
-            %li=link_to("Help", neighbourhood_help_path(@neighbourhood), :class=> "intro-nav-link-help intro-nav-link")
+          -if (neighbourhood = current_user.neighbourhood)
+            %li=link_to('About', neighbourhood_about_path(neighbourhood), :class=>"intro-nav-link-about intro-nav-link")          
+            %li=link_to('Latest news', neighbourhood_news_path(neighbourhood), :class=>"intro-nav-link-latest intro-nav-link")
+            %li=link_to("Help", neighbourhood_help_path(neighbourhood), :class=> "intro-nav-link-help intro-nav-link")
           -else
             %li=link_to_slug('About', :about, :class=>"intro-nav-link-about intro-nav-link")          
             %li=link_to_slug('Latest news', :news, :class=>"intro-nav-link-latest intro-nav-link")
