--- a/app/views/offers/index.html.haml
+++ b/app/views/offers/index.html.haml
@@ -3,7 +3,7 @@
     %h1 My offers    
     -if @offers.empty?
       Your haven't offered to help anyone yet. Click 
-      =link_to("here",needs_path)
+      =link_to("here",new_general_offer_path)
       to see who you could help.
     -else
       %ul.nav.nav-tabs.nav-stacked
@@ -33,5 +33,5 @@
 
 .row
   .span6.offset2                  
-    =link_to "Find someone who needs your help", needs_path, :class=>"btn call-to-action"
+    =link_to "Find someone who needs your help", new_general_offer_path, :class=>"btn call-to-action"
 
