Change messaging at top of forms

--- a/app/views/general_offers/_list_item.html.haml
+++ b/app/views/general_offers/_list_item.html.haml
@@ -11,4 +11,4 @@
         =general_offer.description
       -else
         =general_offer.category.description
-    =link_to("Accept help from #{general_offer.user}", general_offer, :class=>"btn small-help-btn")
+    =link_to("Accept help from #{general_offer.user}", general_offer, :class=>"btn btn-primary small-help-btn")
