--- a/app/views/general_offers/new.html.haml
+++ b/app/views/general_offers/new.html.haml
@@ -19,8 +19,8 @@
   
 .row
   .span6
-    %h3
-      People who need help
+    %h2
+      Help these people
     %ul#suggested-needs.loader-square.help-list.unstyled
       -if @suggested_needs.empty?
         %li
