--- a/app/views/needs/_list_item.html.haml
+++ b/app/views/needs/_list_item.html.haml
@@ -11,4 +11,4 @@
         =need.description
       -else
         =need.category.description
-    =link_to("Help #{need.user}", need, :class=>"btn small-help-btn")
+    =link_to("Help #{need.user}", need, :class=>"btn btn-primary small-help-btn")
