--- a/app/views/needs/new.html.haml
+++ b/app/views/needs/new.html.haml
@@ -20,7 +20,7 @@
 .row
   %hr
   .span6
-    %h2 People currently offering help
+    %h2 Accept help from these people
     %ul#suggested-general-offers.loader-square.help-list.unstyled
       -if @suggested_general_offers.empty?
         %li
